@@ -23,6 +23,9 @@ import java.net.UnknownHostException;
 import java.nio.charset.StandardCharsets;
 import java.util.*;
 import java.util.concurrent.ConcurrentHashMap;
+import java.util.concurrent.ConcurrentLinkedDeque;
+import java.util.concurrent.ConcurrentMap;
+import java.util.concurrent.atomic.AtomicLong;
 import java.util.regex.Matcher;
 import java.util.regex.Pattern;
 
@@ -31,65 +34,50 @@ public class GXCurrentRequestContextUtils {
 
     private static final int MAX_INPUT_LENGTH = 1024 * 1024;
 
-    private static final Set<String> ALLOWED_TAGS = new HashSet<>(Arrays.asList(
+    private static final Set<String> ALLOWED_TAGS = Set.of(
             "p", "br", "b", "i", "u", "strong", "em", "span", "div",
             "ul", "ol", "li", "table", "tr", "td", "th", "thead", "tbody",
             "h1", "h2", "h3", "h4", "h5", "h6", "a", "img"
-    ));
+    );
 
-    private static final Set<String> ALLOWED_ATTRIBUTES = new HashSet<>(Arrays.asList(
+    private static final Set<String> ALLOWED_ATTRIBUTES = Set.of(
             "href", "src", "alt", "title", "style", "class", "id", "align", "width", "height"
-    ));
+    );
 
     private static final Pattern[] XSS_PATTERNS = {
             Pattern.compile("<\\s*script\\b[^>]*>(.*?)<\\s*/\\s*script\\s*>", Pattern.CASE_INSENSITIVE),
-            // 事件属性注入（如 onclick、onerror 等）
             Pattern.compile("on\\w+\\s*=\\s*\"[^\"]*\"", Pattern.CASE_INSENSITIVE),
             Pattern.compile("on\\w+\\s*=\\s*'[^']*'", Pattern.CASE_INSENSITIVE),
-            Pattern.compile("on\\w+\\s*=\\s*`[^`]*`", Pattern.CASE_INSENSITIVE), // 反引号形式
-            // 危险协议（如 javascript:、vbscript:、data:）
+            Pattern.compile("on\\w+\\s*=\\s*`[^`]*`", Pattern.CASE_INSENSITIVE),
             Pattern.compile("javascript\\s*:", Pattern.CASE_INSENSITIVE),
             Pattern.compile("vbscript\\s*:", Pattern.CASE_INSENSITIVE),
             Pattern.compile("data\\s*:[^\\s]*,", Pattern.CASE_INSENSITIVE),
-            // 危险标签（如 iframe、frame、object、embed）
             Pattern.compile("<\\s*iframe[^>]*>(.*?)<\\s*/\\s*iframe\\s*>", Pattern.CASE_INSENSITIVE),
             Pattern.compile("<\\s*frame[^>]*>(.*?)<\\s*/\\s*frame\\s*>", Pattern.CASE_INSENSITIVE),
             Pattern.compile("<\\s*object[^>]*>(.*?)<\\s*/\\s*object\\s*>", Pattern.CASE_INSENSITIVE),
             Pattern.compile("<\\s*embed[^>]*>(.*?)<\\s*/\\s*embed\\s*>", Pattern.CASE_INSENSITIVE),
-            // 危险函数（如 eval、Function、expression）
             Pattern.compile("eval\\((.*?)\\)", Pattern.CASE_INSENSITIVE),
             Pattern.compile("Function\\((.*?)\\)", Pattern.CASE_INSENSITIVE),
             Pattern.compile("expression\\((.*?)\\)", Pattern.CASE_INSENSITIVE),
-            // HTML 实体编码绕过（如 &#x3C; 表示 <）
             Pattern.compile("&#x[0-9a-fA-F]{2,4};?", Pattern.CASE_INSENSITIVE),
             Pattern.compile("&#[0-9]{2,4};?", Pattern.CASE_INSENSITIVE),
-            // SVG 相关攻击（如 SVG onload）
             Pattern.compile("<\\s*svg[^>]*>.*?<\\s*/\\s*svg\\s*>", Pattern.CASE_INSENSITIVE),
-            // img 标签的 onerror 事件注入
             Pattern.compile("<\\s*img[^>]*\\bonerror\\s*=[^>]*>", Pattern.CASE_INSENSITIVE),
-            // meta 标签（可能用于重定向攻击）
             Pattern.compile("<\\s*meta[^>]*>", Pattern.CASE_INSENSITIVE),
-            // CSS 注入（如 style 属性中的 expression）
             Pattern.compile("style\\s*=\\s*['\"][^'\"]*expression\\([^'\"]*\\)[^'\"]*['\"]", Pattern.CASE_INSENSITIVE),
-            // 注释绕过（如 <!-- --> 包含脚本）
             Pattern.compile("<!--.*?-->", Pattern.DOTALL)
     };
 
-    // HTML 标签清理正则表达式，用于提取和验证标签
     private static final Pattern HTML_TAG_PATTERN = Pattern.compile("<([a-zA-Z][a-zA-Z0-9]*)\\b[^>]*>", Pattern.CASE_INSENSITIVE);
-    // HTML 属性清理正则表达式，用于提取和验证属性
     private static final Pattern HTML_ATTRIBUTE_PATTERN = Pattern.compile("\\b([a-zA-Z][a-zA-Z0-9]*)\\s*=\\s*['\"][^'\"]*['\"]", Pattern.CASE_INSENSITIVE);
 
-    // 最大输入长度，防止超长输入导致性能问题
-    private static final int MAX_IP_LENGTH = 45; // IPv6 地址最大长度（包括冒号和压缩格式）
+    private static final int MAX_IP_LENGTH = 45;
 
-    // IPv4 地址的正则表达式（预编译以提高性能）
     private static final Pattern IPV4_PATTERN = Pattern.compile(
             "^(([0-9]|[1-9][0-9]|1[0-9]{2}|2[0-4][0-9]|25[0-5])\\.){3}" +
                     "([0-9]|[1-9][0-9]|1[0-9]{2}|2[0-4][0-9]|25[0-5])$"
     );
 
-    // IPv6 地址的正则表达式（预编译以提高性能）
     private static final Pattern IPV6_PATTERN = Pattern.compile(
             "^(([0-9a-fA-F]{1,4}:){7}([0-9a-fA-F]{1,4}|:))|" +
                     "(([0-9a-fA-F]{1,4}:){6}(:[0-9a-fA-F]{1,4}|((25[0-5]|2[0-4]\\d|1\\d\\d|[1-9]?\\d)" +
@@ -108,54 +96,68 @@ public class GXCurrentRequestContextUtils {
                     "(\\.(25[0-5]|2[0-4]\\d|1\\d\\d|[1-9]?\\d)){3}))|:))$"
     );
 
-    /**
-     * 请求频率限制配置
-     */
     private static final int MAX_REQUESTS_PER_MINUTE = 1000;
-    private static final Map<String, List<Long>> requestTimestamps = new ConcurrentHashMap<>();
-    private static final long CLEANUP_INTERVAL = 60000; // 1分钟清理一次过期记录
-    private static long lastCleanupTime = System.currentTimeMillis();
+    private static final ConcurrentMap<String, ConcurrentLinkedDeque<Long>> requestTimestamps = new ConcurrentHashMap<>();
+    private static final long CLEANUP_INTERVAL = 60000;
+    private static final AtomicLong lastCleanupTime = new AtomicLong(System.currentTimeMillis());
 
     private GXCurrentRequestContextUtils() {
     }
 
+    private static <T> T getDefaultValue(Class<T> clazz) {
+        if (clazz == null) {
+            return null;
+        }
+        return GXCommonUtils.getClassDefaultValue(clazz);
+    }
+
+    private static <T> T convertSafely(Class<T> clazz, Object value, T defaultValue) {
+        if (clazz == null || value == null) {
+            return defaultValue;
+        }
+        try {
+            return Convert.convert(clazz, value);
+        } catch (Exception e) {
+            LOG.debug("Convert value failed: targetType={}, error={}", clazz.getName(), e.getMessage());
+            return defaultValue;
+        }
+    }
+
     public static HttpServletRequest getHttpServletRequest() {
-        ServletRequestAttributes requestAttributes = (ServletRequestAttributes) RequestContextHolder.getRequestAttributes();
-        if (Objects.nonNull(requestAttributes)) {
+        if (RequestContextHolder.getRequestAttributes() instanceof ServletRequestAttributes requestAttributes) {
             return requestAttributes.getRequest();
         }
         return null;
     }
 
     public static HttpServletResponse getHttpServletResponse() {
-        ServletRequestAttributes requestAttributes = (ServletRequestAttributes) RequestContextHolder.getRequestAttributes();
-        if (Objects.nonNull(requestAttributes)) {
+        if (RequestContextHolder.getRequestAttributes() instanceof ServletRequestAttributes requestAttributes) {
             return requestAttributes.getResponse();
         }
         return null;
     }
 
     public static String getDomain() {
-        HttpServletRequest request = Objects.requireNonNull(getHttpServletRequest(), "当前线程不是Web请求线程，无法获取请求域名");
+        HttpServletRequest request = Objects.requireNonNull(getHttpServletRequest(), "Current thread is not an HTTP request thread");
         StringBuffer url = request.getRequestURL();
         return url.delete(url.length() - request.getRequestURI().length(), url.length()).toString();
     }
 
     public static String getOrigin() {
-        HttpServletRequest request = Objects.requireNonNull(getHttpServletRequest(), "当前线程不是Web请求线程，无法获取Origin");
+        HttpServletRequest request = Objects.requireNonNull(getHttpServletRequest(), "Current thread is not an HTTP request thread");
         return request.getHeader("Origin");
     }
 
     public static <T> T getHttpParam(String paramName, Class<T> clazz) {
         if (CharSequenceUtil.isBlank(paramName)) {
-            LOG.warn("参数名不能为空");
-            return GXCommonUtils.getClassDefaultValue(clazz);
+            LOG.warn("Parameter name must not be blank");
+            return getDefaultValue(clazz);
         }
 
         final HttpServletRequest httpServletRequest = getHttpServletRequest();
         if (null == httpServletRequest) {
-            LOG.debug("当前不在HTTP请求上下文中，无法获取请求参数");
-            return GXCommonUtils.getClassDefaultValue(clazz);
+            LOG.debug("No HTTP request context, cannot read request parameter");
+            return getDefaultValue(clazz);
         }
 
         Object jsonRequestBody = Optional.ofNullable(httpServletRequest.getAttribute("JSON_REQUEST_BODY")).orElse("{}");
@@ -163,7 +165,7 @@ public class GXCurrentRequestContextUtils {
         try {
             jsonObject = JSONUtil.toBean(jsonRequestBody.toString(), JSONObject.class);
         } catch (Exception e) {
-            LOG.debug("解析JSON请求体失败: {}", e.getMessage());
+            LOG.debug("Parse JSON request body failed: {}", e.getMessage());
             return getParamFromRequestOrAttribute(httpServletRequest, paramName, clazz);
         }
 
@@ -174,7 +176,7 @@ public class GXCurrentRequestContextUtils {
                     return value;
                 }
             } catch (Exception e) {
-                LOG.debug("从JSON请求体获取参数{}失败: {}", paramName, e.getMessage());
+                LOG.debug("Read parameter from JSON request body failed: paramName={}, error={}", paramName, e.getMessage());
             }
         }
 
@@ -191,10 +193,10 @@ public class GXCurrentRequestContextUtils {
             }
         }
 
-        T obj = Convert.convert(clazz, requestParameter);
+        T obj = convertSafely(clazz, requestParameter, null);
 
         if (null == obj) {
-            return GXCommonUtils.getClassDefaultValue(clazz);
+            return getDefaultValue(clazz);
         }
 
         return obj;
@@ -202,13 +204,13 @@ public class GXCurrentRequestContextUtils {
 
     public static String getHeader(String headerName) {
         if (CharSequenceUtil.isBlank(headerName)) {
-            LOG.warn("请求头名称不能为空");
+            LOG.warn("Header name must not be blank");
             return null;
         }
 
         HttpServletRequest request = getHttpServletRequest();
         if (Objects.isNull(request)) {
-            LOG.debug("本次请求是RPC调用,没有HttpServletRequest对象");
+            LOG.debug("No HttpServletRequest available");
             return null;
         }
         return JakartaServletUtil.getHeader(request, headerName, CharsetUtil.UTF_8);
@@ -217,7 +219,7 @@ public class GXCurrentRequestContextUtils {
     public static Dict getAllHeaders() {
         HttpServletRequest request = getHttpServletRequest();
         if (Objects.isNull(request)) {
-            LOG.debug("本次请求是RPC调用,没有HttpServletRequest对象");
+            LOG.debug("No HttpServletRequest available");
             return Dict.create();
         }
 
@@ -240,13 +242,16 @@ public class GXCurrentRequestContextUtils {
         if (Objects.isNull(headerValue)) {
             return defaultValue;
         }
-        return Convert.convert(targetClass, headerValue);
+        return convertSafely(targetClass, headerValue, defaultValue);
     }
 
     public static <R> R getLoginFieldFromToken(String tokenName, String tokenFieldName, Class<R> clazz, String secretKey) {
-        Object attribute = getHttpServletRequestAttribute(tokenFieldName, clazz);
+        if (CharSequenceUtil.isBlank(tokenFieldName) || clazz == null) {
+            return null;
+        }
+        Object attribute = isHTTP() ? getHttpServletRequestAttribute(tokenFieldName, clazz) : null;
         if (Objects.nonNull(attribute)) {
-            return Convert.convert(clazz, attribute);
+            return convertSafely(clazz, attribute, null);
         }
         if (Objects.isNull(secretKey)) {
             secretKey = GXTokenConstant.USER_TOKEN_SECRET_KEY;
@@ -254,7 +259,7 @@ public class GXCurrentRequestContextUtils {
         Dict dict = getLoginCredentials(tokenName, secretKey);
         Object retValue = dict.getObj(tokenFieldName);
         if (Objects.nonNull(retValue)) {
-            return Convert.convert(clazz, retValue);
+            return convertSafely(clazz, retValue, null);
         }
         return null;
     }
@@ -264,28 +269,36 @@ public class GXCurrentRequestContextUtils {
             return Dict.create();
         }
         HttpServletRequest request = getHttpServletRequest();
-        assert request != null;
+        if (request == null) {
+            return Dict.create();
+        }
         Object attribute = request.getAttribute(GXCommonConstant.SSO_TOKEN_ATTR);
-        if (Objects.nonNull(attribute)) {
-            Dict tokenDict = (Dict) attribute;
+        if (attribute instanceof Dict tokenDict) {
             if (!tokenDict.isEmpty()) {
                 return tokenDict;
             }
+        } else if (Objects.nonNull(attribute)) {
+            LOG.debug("SSO token attribute is not Dict: type={}", attribute.getClass().getName());
         }
         String token = getHeader(tokenName);
         if (CharSequenceUtil.isBlank(token)) {
-            LOG.error("{}不存在", tokenName);
+            LOG.error("Token header is missing: tokenName={}", tokenName);
             return Dict.create();
         }
         if (!GXCommonUtils.isBase64(token)) {
-            LOG.error("token不是一个有效的base64字符串!");
+            LOG.error("Token header is not a valid base64 string");
             return Dict.create();
         }
         String s = GXAuthCodeUtils.authCodeDecode(token, secretKey);
-        if (CharSequenceUtil.equalsIgnoreCase("{}", s)) {
+        if (CharSequenceUtil.equalsIgnoreCase("{}", s) || !JSONUtil.isTypeJSONObject(s)) {
             return Dict.create();
         }
-        return JSONUtil.toBean(s, Dict.class);
+        try {
+            return JSONUtil.toBean(s, Dict.class);
+        } catch (Exception e) {
+            LOG.error("Token JSON parse failed: {}", e.getMessage());
+            return Dict.create();
+        }
     }
 
     public static String getClientIP(HttpServletRequest httpServletRequest) {
@@ -294,16 +307,16 @@ public class GXCurrentRequestContextUtils {
         }
 
         String[] headerNames = {
-                "X-Forwarded-For",       // 最常见的代理IP头
-                "CF-Connecting-IP",      // Cloudflare特有的头
-                "X-Real-IP",             // Nginx代理常用头
-                "Proxy-Client-IP",       // Apache HTTP Server代理使用
-                "WL-Proxy-Client-IP",    // WebLogic代理使用
-                "HTTP_CLIENT_IP",        // 一些代理服务器使用
-                "HTTP_X_FORWARDED_FOR",  // 一些代理服务器使用
-                "X-Cluster-Client-IP",   // 负载均衡场景使用
-                "Fastly-Client-IP",      // Fastly CDN使用
-                "True-Client-IP"         // Akamai和Cloudflare使用
+                "X-Forwarded-For",
+                "CF-Connecting-IP",
+                "X-Real-IP",
+                "Proxy-Client-IP",
+                "WL-Proxy-Client-IP",
+                "HTTP_CLIENT_IP",
+                "HTTP_X_FORWARDED_FOR",
+                "X-Cluster-Client-IP",
+                "Fastly-Client-IP",
+                "True-Client-IP"
         };
 
         String ip;
@@ -314,7 +327,7 @@ public class GXCurrentRequestContextUtils {
                     ip = ip.split(",")[0].trim();
                 }
                 if (isValidIP(ip)) {
-                    LOG.debug("从{}头获取到客户端IP: {}", headerName, ip);
+                    LOG.debug("Client IP found from header: headerName={}, ip={}", headerName, ip);
                     return ip;
                 }
             }
@@ -322,7 +335,7 @@ public class GXCurrentRequestContextUtils {
 
         ip = JakartaServletUtil.getClientIP(httpServletRequest);
         if (!CharSequenceUtil.isBlank(ip)) {
-            LOG.debug("从JakartaServletUtil获取到客户端IP: {}", ip);
+            LOG.debug("Client IP found from JakartaServletUtil: ip={}", ip);
         }
         return CharSequenceUtil.isBlank(ip) ? "" : ip;
     }
@@ -375,25 +388,30 @@ public class GXCurrentRequestContextUtils {
 
             return "UNKNOWN";
         } catch (UnknownHostException e) {
-            LOG.debug("获取IP地址类型时发生异常: {}", ip, e);
+            LOG.debug("Get IP address type failed: ip={}", ip, e);
             return "INVALID";
         }
     }
 
     public static HttpServletRequest setHttpServletRequestAttribute(String attributeName, String attributeValue) {
         final HttpServletRequest servletRequest = getHttpServletRequest();
-        assert servletRequest != null;
+        if (servletRequest == null) {
+            return null;
+        }
         servletRequest.setAttribute(attributeName, attributeValue);
         return servletRequest;
     }
 
     public static <T> T getHttpServletRequestAttribute(String attributeName, Class<T> clazz) {
-        final HttpServletRequest servletRequest = Objects.requireNonNull(getHttpServletRequest());
+        final HttpServletRequest servletRequest = getHttpServletRequest();
+        if (servletRequest == null) {
+            return null;
+        }
         final Object attributeValue = servletRequest.getAttribute(attributeName);
         if (null == attributeValue) {
             return null;
         }
-        return Convert.convert(clazz, attributeValue);
+        return convertSafely(clazz, attributeValue, null);
     }
 
     public static boolean isRPC() {
@@ -409,7 +427,9 @@ public class GXCurrentRequestContextUtils {
     public static boolean tokenExists() {
         if (isHTTP()) {
             HttpServletRequest httpServletRequest = getHttpServletRequest();
-            assert httpServletRequest != null;
+            if (httpServletRequest == null) {
+                return false;
+            }
             String header = JakartaServletUtil.getHeader(httpServletRequest, GXTokenConstant.TOKEN_NAME, StandardCharsets.UTF_8);
             return Objects.nonNull(header);
         }
@@ -418,31 +438,25 @@ public class GXCurrentRequestContextUtils {
 
     public static boolean isInternalV4IP(byte[] ip) {
         if (ip == null || ip.length != 4) {
-            throw new GXBusinessException("非法的IPv4地址字节数组", HttpStatus.HTTP_INTERNAL_ERROR);
+            throw new GXBusinessException("Invalid IPv4 address byte array", HttpStatus.HTTP_INTERNAL_ERROR);
         }
 
-        // 检查是否是本地回环地址 (127.0.0.0/8)
         if (ip[0] == (byte) 127) {
             return true;
         }
 
-        // 检查私有地址范围
-        // 10.0.0.0 - 10.255.255.255 (10/8 前缀)
         if (ip[0] == (byte) 10) {
             return true;
         }
 
-        // 172.16.0.0 - 172.31.255.255 (172.16/12 前缀)
         if (ip[0] == (byte) 172) {
             return (ip[1] & 0xFF) >= 16 && (ip[1] & 0xFF) <= 31;
         }
 
-        // 192.168.0.0 - 192.168.255.255 (192.168/16 前缀)
         if (ip[0] == (byte) 192) {
             return ip[1] == (byte) 168;
         }
 
-        // 检查链路本地地址 (169.254.0.0/16)
         return ip[0] == (byte) 169 && ip[1] == (byte) 254;
     }
 
@@ -460,8 +474,8 @@ public class GXCurrentRequestContextUtils {
 
             return isInternalV4IP(inetAddress.getAddress());
         } catch (UnknownHostException e) {
-            LOG.error("无效的IP地址: {}", ipStr, e);
-            throw new GXBusinessException("无效的IP地址: " + ipStr, HttpStatus.HTTP_INTERNAL_ERROR);
+            LOG.error("Invalid IP address: {}", ipStr, e);
+            throw new GXBusinessException("Invalid IP address: " + ipStr, HttpStatus.HTTP_INTERNAL_ERROR);
         }
     }
 
@@ -470,25 +484,25 @@ public class GXCurrentRequestContextUtils {
             return false;
         }
 
-        return inetAddr.isAnyLocalAddress()    // 任意本地地址
-                || inetAddr.isLinkLocalAddress() // 链路本地地址: fe80::/10
-                || inetAddr.isLoopbackAddress()  // 回环地址: ::1/128
-                || inetAddr.isSiteLocalAddress() // 站点本地地址: fec0::/10(已弃用) 或 fc00::/7(ULA)
-                || inetAddr.isMulticastAddress(); // 组播地址: ff00::/8
+        return inetAddr.isAnyLocalAddress()
+                || inetAddr.isLinkLocalAddress()
+                || inetAddr.isLoopbackAddress()
+                || inetAddr.isSiteLocalAddress()
+                || inetAddr.isMulticastAddress();
     }
 
     public static String filterXSS(String input) {
         if (CharSequenceUtil.isBlank(input)) {
-            LOG.debug("输入为空或仅包含空白字符，直接返回: {}", input);
+            LOG.debug("Input is blank, return directly: {}", input);
             return input;
         }
 
         if (input.length() > MAX_INPUT_LENGTH) {
-            LOG.warn("输入长度超过最大限制 ({}): {}", MAX_INPUT_LENGTH, input.length());
-            throw new IllegalArgumentException("输入长度超过最大限制: " + MAX_INPUT_LENGTH);
+            LOG.warn("Input length exceeds max limit: max={}, actual={}", MAX_INPUT_LENGTH, input.length());
+            throw new IllegalArgumentException("Input length exceeds max limit: " + MAX_INPUT_LENGTH);
         }
 
-        LOG.debug("开始过滤 XSS，原始输入: {}", input);
+        LOG.debug("Start filtering XSS: input={}", input);
 
         String result = input;
         for (Pattern pattern : XSS_PATTERNS) {
@@ -499,7 +513,7 @@ public class GXCurrentRequestContextUtils {
 
         result = encodeHtmlEntities(result);
 
-        LOG.debug("XSS 过滤完成，结果: {}", result);
+        LOG.debug("XSS filtering completed: result={}", result);
         return result;
     }
 
@@ -522,7 +536,7 @@ public class GXCurrentRequestContextUtils {
                 String cleanedTag = cleanAttributes(tagContent);
                 result.append(cleanedTag);
             } else {
-                LOG.debug("移除不在白名单中的标签: {}", tagName);
+                LOG.debug("Remove tag not in whitelist: tagName={}", tagName);
                 String endTag = "</" + tagName + ">";
                 int endTagIndex = input.indexOf(endTag, matcher.end());
                 if (endTagIndex != -1) {
@@ -554,7 +568,7 @@ public class GXCurrentRequestContextUtils {
             if (ALLOWED_ATTRIBUTES.contains(attrName)) {
                 cleanedTag.append(" ").append(attrValue);
             } else {
-                LOG.debug("移除不在白名单中的属性: {} (标签: {})", attrName, tagName);
+                LOG.debug("Remove attribute not in whitelist: attrName={}, tagName={}", attrName, tagName);
             }
         }
 
@@ -564,23 +578,23 @@ public class GXCurrentRequestContextUtils {
 
     public static String encodeHtmlEntities(String input) {
         if (input == null) {
-            LOG.debug("输入为 null，直接返回 null");
+            LOG.debug("Input is null, return null");
             return null;
         }
 
         if (input.length() > MAX_INPUT_LENGTH) {
-            LOG.warn("输入长度超过最大限制 ({}): {}", MAX_INPUT_LENGTH, input.length());
-            throw new IllegalArgumentException("输入长度超过最大限制: " + MAX_INPUT_LENGTH);
+            LOG.warn("Input length exceeds max limit: max={}, actual={}", MAX_INPUT_LENGTH, input.length());
+            throw new IllegalArgumentException("Input length exceeds max limit: " + MAX_INPUT_LENGTH);
         }
 
         if (input.isEmpty()) {
-            LOG.debug("输入为空字符串，直接返回");
+            LOG.debug("Input is empty, return directly");
             return input;
         }
 
-        LOG.debug("开始 HTML 实体编码，原始输入: {}", input);
+        LOG.debug("Start HTML entity encoding: input={}", input);
 
-        StringBuilder encoded = new StringBuilder(input.length() * 2); // 预估编码后长度
+        StringBuilder encoded = new StringBuilder(input.length() * 2);
         for (int i = 0; i < input.length(); i++) {
             char c = input.charAt(i);
             switch (c) {
@@ -609,7 +623,7 @@ public class GXCurrentRequestContextUtils {
         }
 
         String result = encoded.toString();
-        LOG.debug("HTML 实体编码完成，结果: {}", result);
+        LOG.debug("HTML entity encoding completed: result={}", result);
         return result;
     }
 
@@ -619,12 +633,12 @@ public class GXCurrentRequestContextUtils {
         }
 
         long currentTime = System.currentTimeMillis();
-        if (currentTime - lastCleanupTime > CLEANUP_INTERVAL) {
+        long lastCleanup = lastCleanupTime.get();
+        if (currentTime - lastCleanup > CLEANUP_INTERVAL && lastCleanupTime.compareAndSet(lastCleanup, currentTime)) {
             cleanupExpiredRecords(currentTime);
-            lastCleanupTime = currentTime;
         }
 
-        List<Long> timestamps = requestTimestamps.computeIfAbsent(clientId, k -> new ArrayList<>());
+        ConcurrentLinkedDeque<Long> timestamps = requestTimestamps.computeIfAbsent(clientId, k -> new ConcurrentLinkedDeque<>());
 
         long oneMinuteAgo = currentTime - 60000;
         timestamps.removeIf(timestamp -> timestamp < oneMinuteAgo);
@@ -648,7 +662,7 @@ public class GXCurrentRequestContextUtils {
         }
 
         if (param.length() > MAX_INPUT_LENGTH) {
-            LOG.warn("参数长度超过最大限制: {}", param.length());
+            LOG.warn("Parameter length exceeds max limit: actual={}", param.length());
             return false;
         }
 
@@ -666,7 +680,7 @@ public class GXCurrentRequestContextUtils {
 
         for (String pattern : sqlInjectionPatterns) {
             if (Pattern.compile(pattern).matcher(param).find()) {
-                LOG.warn("检测到SQL注入特征: {}", param);
+                LOG.warn("SQL injection pattern detected: param={}", param);
                 return false;
             }
         }
@@ -678,7 +692,7 @@ public class GXCurrentRequestContextUtils {
         T value = getHttpParam(paramName, clazz);
         if (value instanceof String strValue) {
             if (!isValidParameter(strValue)) {
-                throw new GXBusinessException("参数包含非法字符", HttpStatus.HTTP_BAD_REQUEST);
+                throw new GXBusinessException("Parameter contains invalid characters", HttpStatus.HTTP_BAD_REQUEST);
             }
             value = (T) filterXSS(strValue);
         }
@@ -689,7 +703,7 @@ public class GXCurrentRequestContextUtils {
         String headerValue = getHeader(headerName);
         if (CharSequenceUtil.isNotBlank(headerValue)) {
             if (!isValidParameter(headerValue)) {
-                throw new GXBusinessException("请求头包含非法字符", HttpStatus.HTTP_BAD_REQUEST);
+                throw new GXBusinessException("Header contains invalid characters", HttpStatus.HTTP_BAD_REQUEST);
             }
             return filterXSS(headerValue);
         }
@@ -712,7 +726,7 @@ public class GXCurrentRequestContextUtils {
         String ip = getClientIP();
         if (CharSequenceUtil.isNotBlank(ip)) {
             if (!isValidIP(ip)) {
-                LOG.warn("检测到无效的IP地址格式: {}", ip);
+                LOG.warn("Invalid IP address format detected: ip={}", ip);
                 return "";
             }
             return ip;
@@ -724,7 +738,7 @@ public class GXCurrentRequestContextUtils {
         String domain = getDomain();
         if (CharSequenceUtil.isNotBlank(domain)) {
             if (!domain.matches("^https?://[\\w.-]+(:\\d+)?$")) {
-                throw new GXBusinessException("无效的域名格式", HttpStatus.HTTP_BAD_REQUEST);
+                throw new GXBusinessException("Invalid domain format", HttpStatus.HTTP_BAD_REQUEST);
             }
             return filterXSS(domain);
         }
